# mf6rtm

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  SimpleAdvect_py.chem.txt  SimpleAdvect_py.log.txt  advect.pqi  env.yml  fort.1000  fort.1068  phreeqcrm_advex11.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  testing.ipynb  tox.ini  vars.csv  workflow.py
.doc/update/: main.tex
.github/workflows/: tests.yml  tests_macos.yml  tests_main.yml
autotest/: autotest.py  conftest.py  pytest.ini  test_benchmark.py  test_notebooks.py
autotest/benchmark/: test01_benchmark.csv  test02_benchmark.csv  test04_benchmark.csv  test05_benchmark.csv
autotest/data/: test01_equilibrium_phases.csv  test02_postfix.phqr  test02_solutions.csv  test04_exchange.csv  test04_solutions.csv  test05_equilibrium_phases.csv  test05_exchange.csv  test05_postfix.phqr  test05_solutions.csv  test05_surfaces.csv  walter1994_equilibrium_phases.csv
benchmark/: ex1.ipynb  ex2.ipynb  ex3.ipynb  ex4.ipynb  ex5.ipynb
benchmark/data/: engesgaard1992_solutions.csv  ex1_postfix.phqr  ex2_equilibrium_phases.csv  ex5_kinetic_phases.csv  ex5_obs.txt  ex5_postfix.phqr  ex5_solutions.csv  solutions_stress_input .csv  walter1994_equilibrium_phases.csv  walter1994_solutions.csv
benchmark/engesgaard1992/: engesgaard1992.ipynb  error.inp  myrun.chem.txt  myrun.log.txt
benchmark/engesgaard1992/engesgaard1992_mf6rtm/: C.adv  C.dis  C.dsp  C.dsp_ath1.txt  C.ic  C.lst  C.mst  C.nam  C.oc  C.ssm  C.ssm_sources.txt  C.ucn  Ca.dis  Ca.dsp  Ca.gwfgwt  Ca.ic  Ca.ic_strt.txt  Ca.lst  Ca.mst  Ca.nam  Ca.oc  Ca.ssm  Ca.ssm_sources.txt  Ca.ucn  Charge.dis  Charge.dsp  Charge.ic  Charge.ic_strt.txt  Charge.lst  Charge.mst  Charge.mst_porosity.txt  Charge.nam  Charge.oc  Charge.ssm  Charge.ssm_sources.txt  Charge.ucn  Cl.dis  Cl.dis_top.txt  Cl.dsp  Cl.dsp_alh.txt  (+62 more)
benchmark/ex1/: ex1.ipynb
benchmark/ex1/pht3d/: MT3D.CNF  (+18 more)
benchmark/ex2/: ex2.ipynb
benchmark/ex3/: ex3.ipynb
benchmark/ex4/: ex4.ipynb
benchmark/ex5/: ex5.ipynb
benchmark/pht3d/: MT3D001.MAS  Mt3dms.dsp  Mt3dms.gcg  Mt3dms.out  Mt3dms.ssm  PHT3D001.MAS  PHT3D001.UCN  PHT3D001.XMAS  PHT3D002.MAS  PHT3D002.UCN  PHT3D002.XMAS  PHT3D003.MAS  PHT3D003.UCN  PHT3D003.XMAS  PHT3D004.MAS  PHT3D004.UCN  PHT3D004.XMAS  PHT3D005.MAS  PHT3D005.UCN  PHT3D005.XMAS  PHT3D006.MAS  PHT3D006.UCN  PHT3D006.XMAS  PHT3D007.MAS  PHT3D007.UCN  PHT3D008.MAS  PHT3D008.UCN  PHT3D008.XMAS  Pht3d.btn  Pht3d.nam  Pht3d.out  Pht3d.ssm  engesgaard1992.dis  engesgaard1992.head  engesgaard1992.orti  engesgaard1992.wel  pht3d.m  postfix.phrq  solutions.pqi
benchmark/walter1994/: error.inp  myrun.chem.txt  myrun.log.txt  runmodel.py  walter1994.ipynb  walter1994.py  walter1994_1D.ipynb  walter1994_2D.ipynb
mf6rtm/: __init__.py  mf6rtm.py  utils.py
model/1dtest/: 1dtest.gwfgwt  1dtest.tdis  chloride.adv  chloride.dis  chloride.dsp  chloride.ic  chloride.ims  chloride.mst  chloride.nam  chloride.oc  chloride.ssm  gwf.chd  gwf.chd_stress_period_data_1.txt  gwf.dis  gwf.ic  gwf.ims  gwf.nam  gwf.npf  gwf.oc  gwf.wel  gwf.wel_stress_period_data_1.txt  mfsim.lst  mfsim.nam  mfsim.stdout
model/engesgaard1992/: engesgaard1992.tdis  gwf.chd  gwf.dis  gwf.dis.grb  gwf.ic  gwf.ims  gwf.lst  gwf.nam  gwf.npf  gwf.oc  gwf.wel  mfsim.lst  mfsim.nam  mfsim.stdout  sodium.adv  sodium.dis  sodium.dsp  sodium.gwfgwt  sodium.ic  sodium.ims  sodium.lst  sodium.mst  sodium.nam  sodium.oc  sodium.ssm
src/mf6rtm/: __init__.py  __main__.py  mf6rtm.py  mup3d.py  utils.py
(+821 files in other folders)
