[metadata]
name = mf6rtm
description = Reactive transport model through MODFLOW 6 and PHREEQCRM
author = Pablo Ortega
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
# packages =
#     mf6rtm
py_modules = mf6rtm
install_requires =
    phreeqcrm
    modflowapi
    flopy
python_requires = >=3.6
package_dir =
    =mf6rtm
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
mf6rtm = py.typed

[flake8]
max-line-length = 160