[metadata]
name = mf6rtm
description = Reactive transport model through MODFLOW 6 and PHREEQCRM
author = Pablo Ortega
author-email = portega@intera.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    mf6rtm
py_modules = 
    mf6rtm
    utils
install_requires =
    phreeqcrm
    modflowapi
    flopy
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=2.0
    mypy>=1.10
    flake8>=3.9
    tox>=3.24
    flaky>=3.8
    jupytext>=1.16.0
    nbconvert>=7.16
    ipykernel>=6.29

[options.package_data]
mf6rtm = py.typed

[flake8]
max-line-length = 160
extend-ignore = E, F

[options.entry_points]
console_scripts =
    mf6rtm = mf6rtm:run_cmd