[metadata]
name = mf6rtm
description = Reactive transport model through MODFLOW 6 and PHREEQCRM
author = Pablo Ortega
author-email = portega@intera.com
license = BSD 3-Clause
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = MODFLOW, PHREEQCRM, reactive transport, groundwater, hydrology
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    ; Programming Language :: Python :: 3.6
    ; Programming Language :: Python :: 3.7
    ; Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering :: Hydrology
version = 0.1.4
long_description = file: README.md
long_description_content_type = text/markdown
[options]
packages =
    mf6rtm
include_package_data = True
py_modules = 
    mf6rtm
    utils
install_requires =
    phreeqcrm
    modflowapi
    flopy
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=2.0
    mypy>=1.10
    flake8>=3.9
    tox>=3.24
    flaky>=3.8
    jupytext>=1.16.0
    nbconvert>=7.16
    ipykernel>=6.29

[options.package_data]
mf6rtm = py.typed

[flake8]
max-line-length = 160
extend-ignore = E, F

[options.entry_points]
console_scripts =
    mf6rtm = mf6rtm:run_cmd